@@ -37,6 +37,7 @@ Changes:
  - Moved Fire Resistance Potion to buffs category.
 
 Bug Fixes:
+ - Fixed crash when renaming equipment from the equip scene.
  - Fixed scrolling on a large victory drop list causing the list to disappear.
  - Fixed Rainbow Slime's ATK Up animation still showing after being defeated.
  - Fixed missing battlebacks in some towns during Catalyst ambushes.
